<resources>
    <string name="app_name">Cinemapp</string>
    <string name="storyline">Storyline</string>
    <string name="lore">After the devastating events of Avengers:
        Infinity War, the universe is in ruins. With the help of
        remaining allies, the Avengers assemble once more in order to reverse Thanos
        actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="pegi">13+</string>
    <string name="FilmName">Avengers: End Game</string>
    <string name="Genre">Action, Adventure, Fantasy</string>
    <string name="reviews">125 REVIEWS</string>
    <string name="actor1">Robert Downey Jr.</string>
    <string name="actor2">Chris  Evans</string>
    <string name="actor3">Mark  Ruffalo</string>
    <string name="actor4">Chris Hemsworth</string>
    <string name="back">Back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies_list">Movies list</string>
    <string name="_13">13+</string>
</resources>