<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:layout_marginBottom="10dp">

    <ImageView
        android:id="@+id/moviesListBlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/moviebg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/filmPoster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:src="@drawable/moviepic"
        app:layout_constraintStart_toStartOf="@+id/listMask"
        app:layout_constraintTop_toTopOf="@+id/listMask" />

    <ImageView
        android:id="@+id/listMask"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/moviemask"
        app:layout_constraintBottom_toBottomOf="@id/filmPoster"
        app:layout_constraintEnd_toEndOf="@+id/moviesListBlock"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/moviesListBlock"
        app:layout_constraintTop_toTopOf="@+id/moviesListBlock"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/filmGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="22dp"
        android:text="@string/Genre"
        android:textColor="@color/genre"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/filmPoster"
        app:layout_constraintStart_toStartOf="@+id/filmPoster" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/fullstar"
        app:layout_constraintBottom_toBottomOf="@+id/filmPoster"
        app:layout_constraintStart_toStartOf="@+id/filmGenre" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginStart="2dp"
        android:src="@drawable/fullstar"
        app:layout_constraintStart_toEndOf="@+id/imageView18"
        app:layout_constraintTop_toTopOf="@+id/imageView18" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginStart="2dp"
        android:src="@drawable/fullstar"
        app:layout_constraintStart_toEndOf="@+id/imageView19"
        app:layout_constraintTop_toTopOf="@+id/imageView18" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginStart="2dp"
        android:src="@drawable/fullstar"
        app:layout_constraintStart_toEndOf="@+id/imageView20"
        app:layout_constraintTop_toTopOf="@+id/imageView18" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginStart="2dp"
        android:src="@drawable/emptystar"
        app:layout_constraintStart_toEndOf="@+id/imageView21"
        app:layout_constraintTop_toTopOf="@+id/imageView18" />

    <TextView
        android:id="@+id/filmReviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="2dp"
        android:text="@string/reviews"
        android:textColor="@color/review"
        android:textSize="8sp"
        app:layout_constraintStart_toEndOf="@+id/imageView22"
        app:layout_constraintTop_toBottomOf="@+id/filmGenre" />

    <TextView
        android:id="@+id/filmName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/FilmName"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/moviesListBlock"
        app:layout_constraintEnd_toEndOf="@+id/moviesListBlock"
        app:layout_constraintStart_toStartOf="@+id/moviesListBlock"
        app:layout_constraintTop_toBottomOf="@+id/filmPoster" />

    <TextView
        android:id="@+id/filmDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="137 MIN"
        android:textColor="@color/review"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@+id/filmName"
        app:layout_constraintTop_toBottomOf="@+id/filmName" />

    <ImageView
        android:id="@+id/likeIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="6dp"
        app:layout_constraintEnd_toEndOf="@+id/filmPoster"
        app:layout_constraintTop_toTopOf="@+id/moviesListBlock"
        app:srcCompat="@drawable/like" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/filmPoster"
        app:layout_constraintTop_toTopOf="@+id/moviesListBlock"
        app:srcCompat="@drawable/listrating" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_13"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageView15"
        app:layout_constraintEnd_toEndOf="@+id/imageView15"
        app:layout_constraintStart_toStartOf="@+id/imageView15"
        app:layout_constraintTop_toTopOf="@+id/imageView15" />

</androidx.constraintlayout.widget.ConstraintLayout>